Support null for sort field values